Tested in services layer with books 'GET all authors'